@@ -1,5 +1,4 @@
 from datetime import date
-from zope.component import getMultiAdapter
 from zope.component import getUtility
 from zope.schema.interfaces import IVocabularyFactory
 
@@ -15,8 +14,6 @@ from .utils import get_user_details
 class View(grok.View):
     grok.context(IProject)
     grok.require('zope2.View')
-
-    MAX_ELEMENTS = 5
 
     @memoize
     def status_vocabulary(self):
@@ -46,50 +43,10 @@ class View(grok.View):
         return voc.getTermByToken(value).title
 
     @memoize
-    def portal_state(self):
-        return getMultiAdapter(
-            (self.context, self.request),
-            name='plone_portal_state'
-        )
-
-    @memoize
     def tools(self):
         return {
             'portal_catalog': getToolByName(self.context, 'portal_catalog')
         }
-
-    def dashboard(self):
-        result = {
-            'tickets': [],
-            'tickets_n': 0,
-            'stories': [],
-            'stories_n': 0
-        }
-        portal_state = self.portal_state()
-        if not portal_state.anonymous():
-            user = portal_state.member()
-            pc = self.tools()['portal_catalog']
-            searches = [
-                ({ 'portal_type': 'PoiIssue',
-                   'getResponsibleManager': user.getId(),
-                   'review_state': ('new', 'open', 'in-progress', 'resolved',
-                                    'unconfirmed') },
-                 'tickets'),
-                ({ 'portal_type': 'Story',
-                   'assigned_to': user.getId(),
-                   'review_state': ('todo', 'suspended', 'in_progress') },
-                 'stories')
-            ]
-            for query, result_key in searches:
-                query.update({
-                    'path': '/'.join(self.context.getPhysicalPath())
-                })
-                results = pc.searchResults(query)
-                result[result_key] = results[:self.MAX_ELEMENTS]
-                result['%s_n' % result_key] = total = len(results)
-                if total <= self.MAX_ELEMENTS:
-                    result['%s_n' % result_key] = False
-        return result
 
     def iterations(self):
         iterations = {
@@ -142,8 +99,8 @@ class View(grok.View):
                 'user': get_user_details(self.context, i.user_id)
             }
 
+
 class OverView(View):
     grok.context(IProject)
     grok.name('overview')
     grok.require('zope2.View')
-
